--- a/plop-templates/apiGetTable.hbs
+++ b/plop-templates/apiGetTable.hbs
@@ -5,6 +5,12 @@ import { {{methodName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{t
 import crypto from "crypto"
 import { NextRequest, NextResponse } from "next/server"
 
+// eslint-disable-next-line @typescript-eslint/no-explicit-any
+let cachedData: any = null
+let cachedETag: string | null = null
+const CACHE_TTL = 3_000
+let lastUpdated = 0
+
 export async function GET(request: NextRequest): Promise<NextResponse> {
   const session = await auth()
   const sessionUserId = session?.user?.userId
@@ -13,16 +19,19 @@ export async function GET(request: NextRequest): Promise<NextResponse> {
   }
 
   try {
-    const result = await {{methodName}}()
-  
-    const etag = crypto.createHash("sha1").update(JSON.stringify(result)).digest("hex")
-    const clientEtag = request.headers.get("if-none-match")
-
-    if (clientEtag === etag) {
-      return new NextResponse(null, { status: 304, headers: { ETag: etag } })
+    if (!cachedData || Date.now() - lastUpdated > CACHE_TTL) {
+      cachedData = await {{methodName}}()
+      cachedETag = crypto.createHash("sha1").update(JSON.stringify(cachedData)).digest("hex")
+      lastUpdated = Date.now()
     }
 
-    return NextResponse.json(result, { headers: { ETag: etag } })
+    const clientEtag = request.headers.get("if-none-match")
+
+    if (clientEtag === cachedETag) {
+      return new NextResponse(null, { status: 304, headers: { ETag: cachedETag! } })
+    }
+
+    return NextResponse.json(cachedData, { headers: { ETag: cachedETag! } })
   } catch (error) {
     return NextResponse.json({ success: false, error: error })
   }
