--- a/plop-templates/apiGetTableByKey.hbs
+++ b/plop-templates/apiGetTableByKey.hbs
@@ -7,6 +7,12 @@ import { NextRequest, NextResponse } from "next/server"
 {{#if methodParamsColumns}}
 import z from "zod"
 
+// eslint-disable-next-line @typescript-eslint/no-explicit-any
+let cachedData: any = null
+let cachedETag: string | null = null
+const CACHE_TTL = 3_000
+let lastUpdated = 0
+
 type TApiParams = Record<string, string>
 
 const typeParamsSchema = z.object({
@@ -29,16 +35,19 @@ export async function GET(request: NextRequest{{#if methodParamsColumns}}, { par
   {{/if}}
 
   try {
-    const result = await {{methodNameByKey}}({{#if methodParamsColumns}}parsedParams{{/if}})
-  
-    const etag = crypto.createHash("sha1").update(JSON.stringify(result)).digest("hex")
+    if (!cachedData || Date.now() - lastUpdated > CACHE_TTL) {
+      cachedData = await {{methodNameByKey}}({{#if methodParamsColumns}}parsedParams{{/if}})
+      cachedETag = crypto.createHash("sha1").update(JSON.stringify(cachedData)).digest("hex")
+      lastUpdated = Date.now()
+    }
+    
     const clientEtag = request.headers.get("if-none-match")
 
-    if (clientEtag === etag) {
-      return new NextResponse(null, { status: 304, headers: { ETag: etag } })
+    if (clientEtag === cachedETag) {
+      return new NextResponse(null, { status: 304, headers: { ETag: cachedETag! } })
     }
 
-    return NextResponse.json(result, { headers: { ETag: etag } })
+    return NextResponse.json(cachedData, { headers: { ETag: cachedETag! } })
   } catch (error) {
     return NextResponse.json({ success: false, error: error })
   }
