--- a/plop-templates/hookGetMethodFetcher.hbs
+++ b/plop-templates/hookGetMethodFetcher.hbs
@@ -14,14 +14,10 @@ export function useFetch{{methodPascalName}}({{#if methodParamsColumns}} params:
 
   const { data } = useSWR(`{{apiPathParams}}`, { refreshInterval: 3000 })
 
-  const prevDataRef = useRef<unknown>(null)
-
   useEffect(() => {
-    if (data === undefined) return
-    if (JSON.stringify(prevDataRef.current) !== JSON.stringify(data)) {
-      const index = data ? ({{{indexMethodName}}}({{{indexMethodParams}}}, data) as {{indexTypeName}}) : {}
+    if (data) {
+      const index = ({{{indexMethodName}}}({{{indexMethodParams}}}, data) as {{indexTypeName}})
       set{{methodPascalName}}(index)
-      prevDataRef.current = data
     }
   }, [data, set{{methodPascalName}}])
   
