--- a/plop-templates/hookGetTableByKeyServer.hbs
+++ b/plop-templates/hookGetTableByKeyServer.hbs
@@ -6,15 +6,29 @@ import { {{methodNameByKey}} } from "@/db/postgresMainDatabase/schemas/{{schema}
 {{#if methodParamsColumns}}import { {{methodParamsTypeName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tableCamelName}}" {{/if}}
 import type { {{methodTypeName}}, {{indexTypeName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tableCamelName}}"
 
+// eslint-disable-next-line @typescript-eslint/no-explicit-any
+let cachedData: any = null
+const CACHE_TTL = 3_000
+let lastUpdated = 0
+
 export async function {{methodNameByKey}}Server({{#if methodParamsColumns}} params: {{methodParamsTypeName}}{{/if}}): Promise<{
   raw: {{methodTypeName}}[]
   byKey: {{indexTypeName}}
   apiPath: string
   atomName: string
 }> {
+  if (cachedData && Date.now() - lastUpdated < CACHE_TTL) {
+    return cachedData
+  }
+
   const {{methodNameByKey}}Data = await {{methodNameByKey}}({{#if methodParamsColumns}}params{{/if}})
 
   const data = {{methodNameByKey}}Data ? ({{{indexMethodName}}}({{{indexMethodParams}}}, {{methodNameByKey}}Data) as {{indexTypeName}}) : {}
 
-  return { raw: {{methodNameByKey}}Data, byKey: data, apiPath: `{{apiPathParamsByKey}}`, atomName: `{{tableCamelName}}Atom`  }
+  const result = { raw: {{methodNameByKey}}Data, byKey: data, apiPath: `{{apiPathParamsByKey}}`, atomName: `{{tableCamelName}}Atom`  }
+
+  cachedData = result
+  lastUpdated = Date.now()
+
+  return result
 }
