--- a/plop-templates/apiGetMethodFetcher.hbs
+++ b/plop-templates/apiGetMethodFetcher.hbs
@@ -25,8 +25,9 @@ const typeParamsSchema = z.object({
 export async function GET(request: NextRequest{{#if methodParamsColumns}}, { params }: { params: TApiParams } {{/if}}): Promise<NextResponse> {
   const session = await auth()
   const sessionUserId = session?.user?.userId
+  
   if (!sessionUserId || isNaN(sessionUserId)) {
-    return NextResponse.json({ success: false })
+    return NextResponse.json({ message: "Unauthorized" }, { status: 401 })
   }
   
   {{#if methodParamsColumns}}
@@ -49,6 +50,7 @@ export async function GET(request: NextRequest{{#if methodParamsColumns}}, { par
 
     return NextResponse.json(cachedData, { headers: { ETag: cachedETag! } })
   } catch (error) {
-    return NextResponse.json({ success: false, error: error })
+    console.log(error)
+    return NextResponse.json({ message: "Internal Server Error" }, { status: 500 })
   }
 }
