--- a/plop-templates/apiGetTable.hbs
+++ b/plop-templates/apiGetTable.hbs
@@ -14,8 +14,9 @@ let lastUpdated = 0
 export async function GET(request: NextRequest): Promise<NextResponse> {
   const session = await auth()
   const sessionUserId = session?.user?.userId
+
   if (!sessionUserId || isNaN(sessionUserId)) {
-    return NextResponse.json({ success: false })
+    return NextResponse.json({ message: "Unauthorized" }, { status: 401 })
   }
 
   try {
@@ -33,6 +34,7 @@ export async function GET(request: NextRequest): Promise<NextResponse> {
 
     return NextResponse.json(cachedData, { headers: { ETag: cachedETag! } })
   } catch (error) {
-    return NextResponse.json({ success: false, error: error })
+    console.log(error)
+    return NextResponse.json({ message: "Internal Server Error" }, { status: 500 })
   }
 }
