--- a/plop-templates/hookGetTableServer.hbs
+++ b/plop-templates/hookGetTableServer.hbs
@@ -1,33 +1,23 @@
 // GENERATED CODE - DO NOT EDIT MANUALLY - hookGetTableServer.hbs
 "use server"
 
-import { {{indexMethodName}} } from "@/methods/functions/util/converters"
-import { {{methodName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tableCamelName}}"
 import type { {{methodTypeName}}, {{indexTypeName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tableCamelName}}"
+import { {{fetcherName}} } from "@/methods/services/{{schema}}/{{fetcherName}}"
 
-// eslint-disable-next-line @typescript-eslint/no-explicit-any
-let cachedData: any = null
-const CACHE_TTL = 3_000
-let lastUpdated = 0
-
-export async function {{methodName}}Server(): Promise<{
+type TResult = {
   raw: {{methodTypeName}}[]
   byKey: {{indexTypeName}}
   apiPath: string
   atomName: string
-}> {
-  if (cachedData && Date.now() - lastUpdated < CACHE_TTL) {
-    return cachedData
+}
+
+export async function {{methodName}}Server(): Promise<TResult> {
+  const { record } = await {{fetcherName}}()
+
+  return {
+    raw: record!.raw,
+    byKey: record!.byKey,
+    apiPath: `{{apiPathParams}}`,
+    atomName: `{{tableCamelName}}Atom`,
   }
-
-  const {{methodName}}Data = await {{methodName}}()
-
-  const data = {{methodName}}Data ? ({{{indexMethodName}}}({{{indexMethodParams}}}, {{methodName}}Data) as {{indexTypeName}}) : {}
-
-  const result = { raw: {{methodName}}Data, byKey: data, apiPath: `{{apiPathParams}}`, atomName: `{{tableCamelName}}Atom` }
-  
-  cachedData = result
-  lastUpdated = Date.now()
-
-  return result
 }
