--- a/plop-templates/apiGetTableByKey.hbs
+++ b/plop-templates/apiGetTableByKey.hbs
@@ -32,7 +32,7 @@ export async function GET(request: NextRequest{{#if methodParamsColumns}}, { par
 
     const clientEtag = request.headers.get("if-none-match") ?? undefined
 
-    const { record, etag, cacheHit, etagMatched } = await fetch{{fetcherNameByKey}}({{#if methodParamsColumns}}parsedParams,{{/if}} { clientEtag })
+    const { record, etag, cacheHit, etagMatched } = await {{fetcherNameByKey}}({{#if methodParamsColumns}}parsedParams,{{/if}} { clientEtag })
 
     if (cacheHit || etagMatched) {
       return new NextResponse(null, { status: 304, headers: { ETag: etag } })
