--- a/plop-templates/serviceGetTableByKey.hbs
+++ b/plop-templates/serviceGetTableByKey.hbs
@@ -48,7 +48,7 @@ export async function {{fetcherNameByKey}}(
     }
   }
 
-  const raw = await {{methodNameByKey}}()
+  const raw = await {{methodNameByKey}}({{#if methodParamsColumns}}params{{/if}})
   const etag = crypto.createHash("sha1").update(JSON.stringify(raw)).digest("hex")
 
   if (!cached && etag === options?.clientEtag && cachedEtag === options?.clientEtag) {
