--- a/plop-generators/plop-templates/getTable/apiGetTableByKey.hbs
+++ b/plop-generators/plop-templates/getTable/apiGetTableByKey.hbs
@@ -2,7 +2,7 @@
 
 import { auth } from "@/auth"
 {{#if methodParamsColumns}}import { {{methodParamsTypeName}} } from "@/db/postgresMainDatabase/schemas/{{schema}}/{{tableCamelName}}"{{/if}}
-import { {{fetcherNameByKey}} } from "@/methods/services/{{schema}}/{{fetcherNameByKey}}"
+import { {{fetcherNameByKey}}Service } from "@/methods/services/{{schema}}/{{fetcherNameByKey}}Service"
 import { NextRequest, NextResponse } from "next/server"
 {{#if methodParamsColumns}}
 import z from "zod"
@@ -32,7 +32,7 @@ export async function GET(request: NextRequest{{#if methodParamsColumns}}, { par
 
     const clientEtag = request.headers.get("if-none-match") ?? undefined
 
-    const { record, etag, cacheHit, etagMatched } = await {{fetcherNameByKey}}({{#if methodParamsColumns}}parsedParams,{{/if}} { clientEtag })
+    const { record, etag, cacheHit, etagMatched } = await {{fetcherNameByKey}}Service({{#if methodParamsColumns}}parsedParams,{{/if}} { clientEtag })
 
     if (cacheHit || etagMatched) {
       return new NextResponse(null, { status: 304, headers: { ETag: etag } })
