--- a/plop-generators/plop-templates/getTable/apiGetTable.hbs
+++ b/plop-generators/plop-templates/getTable/apiGetTable.hbs
@@ -1,7 +1,7 @@
 // GENERATED CODE - DO NOT EDIT MANUALLY - apiGetTable.hbs
 
 import { auth } from "@/auth"
-import { {{fetcherName}} } from "@/methods/services/{{schema}}/{{fetcherName}}"
+import { {{fetcherName}}Service } from "@/methods/services/{{schema}}/{{fetcherName}}Service"
 import { NextRequest, NextResponse } from "next/server"
 
 export async function GET(request: NextRequest): Promise<NextResponse> {
@@ -15,7 +15,7 @@ export async function GET(request: NextRequest): Promise<NextResponse> {
 
     const clientEtag = request.headers.get("if-none-match") ?? undefined
 
-    const { record, etag, cacheHit, etagMatched } = await {{fetcherName}}({ clientEtag })
+    const { record, etag, cacheHit, etagMatched } = await {{fetcherName}}Service({ clientEtag })
 
     if (cacheHit || etagMatched) {
       return new NextResponse(null, { status: 304, headers: { ETag: etag } })
